--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: project-name
-version: 1
+application: coe-movie-db-17
+version: 2
 runtime: python27
 api_version: 1
 threadsafe: true
@@ -7,6 +7,9 @@ threadsafe: true
 handlers:
 - url: /static
   static_dir: static
+
+- url: /images
+  static_dir: images
 
 - url: /.*
   script: main.application
